--- a/static/index.html
+++ b/static/index.html
@@ -23,8 +23,8 @@
                 </div>
                 
                 <div id="player-form" class="form-section hidden">
-                    <input type="text" id="player-name" placeholder="Enter your name" maxlength="20">
-                    <input type="text" id="room-code" placeholder="Enter room code (e.g., room_123456)" maxlength="15">
+                    <input type="text" id="player-name" placeholder="Enter your name" maxlength="20" autocomplete="off">
+                    <input type="text" id="room-code" placeholder="Enter room code (e.g., room_123456)" maxlength="15" autocomplete="off">
                     <button id="submit-player" class="btn btn-primary">Continue</button>
                 </div>
             </div>
